[project]
name = "content-moderation-env"
version = "1.0.0"
description = "Multi-step AI content moderation environment with tool usage and reasoning"
authors = [
    { name = "your-name", email = "your-email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
