[project]
name = "content-moderation-env"
version = "1.0.0"
description = "Multi-step AI content moderation environment with tool usage and reasoning"
authors = [
    { name = "Saroj Gautam" },
    { name = "Meghna B Menon" },
    { name = "Madhumathi B" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
